--- a/docs/templates/document_distribute.html
+++ b/docs/templates/document_distribute.html
@@ -8,7 +8,7 @@
     <!-- DOCUMENT VIEW
     ================================================== -->
 
-    <div class="col-sm-8 col-md-9 main">
+    <div class="col-sm-8 col-md-9 with-toolbar">
 
       <div class="top-spacer">
       </div>
