Added padding to top of document view and sent templates

--- a/docs/templates/document_sent.html
+++ b/docs/templates/document_sent.html
@@ -5,10 +5,7 @@
 {% block content %}
 
 
-<div class="col-sm-8">
-
-  <div class="top-spacer-large">
-  </div>
+<div class="col-sm-8 no-toolbar">
 
   <div class="panel panel-primary">
     <div class="panel-heading">
