--- a/docs/templates/minutes_edit_ajax_items.html
+++ b/docs/templates/minutes_edit_ajax_items.html
@@ -70,7 +70,8 @@
     <div class="panel panel-default" id="panel_{{ item.item_no.value}}">
       <div class="panel-heading">
         {% if item.added_in_meeting.value == True %}
-          Item&nbsp;{{ item.item_no.value }}. Item added during meeting
+          Item&nbsp;{{ item.item_no.value }}.&nbsp;
+          Item added during meeting
           <button type="button" title="Delete item" 
             class="btn btn-default btn-item-delete ajax-button pull-right"
             id="delete_item_{{ item.item_no.value}}">
